fix: adjusted alignment of for images

--- a/style/form.css
+++ b/style/form.css
@@ -212,12 +212,14 @@ input[type="checkbox"]:checked+label.cachorro::after {
     border-radius: 10%;
     background-color: var(--yellow);
     width: 30%;
+    padding: 10px; /* Adiciona algum padding ao redor dos labels */
 }
+
 .control-form-radio input[type="radio"] + label::before {
     background-color: transparent;
     width: 70px;
     height: 70px;
-    transform: translate(-55%, -55%) ; /
+    transform: translate(-50%, -50%);
 }
 
 .control-form-radio input[type="radio"] {
@@ -228,35 +230,40 @@ input[type="checkbox"]:checked+label.cachorro::after {
 .control-form-radio label {
     cursor: pointer;
     position: relative;
-    background-repeat: no-repeat;
     width: 70px; 
     height: 70px;
     border-radius: 50%; 
     background-color: white;
     transition: background-color 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .control-form-radio input[type="radio"]:checked + label {
     background-color: var(--red); 
 }
 
-
 .control-form-radio .input-image {
-    width: 100%; 
-    height: 100%; 
-    background-size: cover;
-    display: block;
+    width: 70px; 
+    height: 70px; 
+    background-size: contain; 
+    background-position: center;
+    background-repeat: no-repeat; 
     background-color: transparent;
     border-radius: 50%; 
 }
 
-#cachorro-pet + label {
+#cachorro-pet + label .input-image {
+    width: 60px;
     background-image: url("../assets/image\ 168.svg"); 
 }
 
-#gato-pet + label {
+#gato-pet + label .input-image {
+    width: 63px;
     background-image: url("../assets/cat\ 1.svg"); 
 }
+
 
 .control-form-buttons {
     display: flex;
